--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-swipeable": "^7.0.2",
     "react-type-animation": "^3.2.0",
     "redux-persist": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.3"
   },
